Fixes masthead alignmentr

--- a/style.css
+++ b/style.css
@@ -185,6 +185,8 @@ Header:
   right: 0;
   padding: 0 1em;
   text-align: center;
+  align-items: center;
+  vertical-align: middle;
   max-width: 100%;
   height: 8rem;
   background: rgba(255, 255, 255, 0.1);
@@ -224,14 +226,14 @@ Header:
   animation: fill-in 2s ease-out 3s;
 }
 .site-title {
-  font-size: clamp(1.8rem, 2.5vw + 1rem, 3rem);
+  font-size: clamp(1.6rem, 2.5vw + 1rem, 3rem);
   margin: auto 0;
   opacity: 0;
   animation: fill-in 2s ease-in 2s forwards;
 }
 
 .site-subtitle {
-  font-size: clamp(1.2rem, 2.3vw + 1rem, 2.5rem);
+  font-size: clamp(1rem, 2.2vw + 1rem, 2.4rem);
   opacity: 0;
   animation: fill-in 2s ease-in 2.5s forwards;
 }
@@ -240,6 +242,49 @@ Header:
   100% {
     opacity: 1;
   }
+}
+
+/* Wrapper */
+.masthead .iconButton {
+  border-radius: 50%;
+  display: inline-block;
+  font-size: 2.25rem;
+  font-weight: 100;
+  width: 3.2rem;
+  height: 3.05rem;
+  line-height: 3rem;
+  /* margin: 1rem auto; */
+  position: relative;
+  text-align: center;
+  /* Milk-glass code below */
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  transition: all 0.3s ease;
+}
+
+/*  Masthead Icons */
+.mastGit {
+  text-align: right;
+  margin-top: -5.5rem;
+  margin-right: 3rem;
+}
+@media screen and (max-width: 768px) {
+  .mastGit {
+    margin-top: -4rem;
+  }
+}
+.masthead .iconButton i {
+  color: white;
+  z-index: 10;
+  cursor: url(images/glove2.png), auto;
+  transition: 0.2s ease;
+}
+
+.masthead .github i {
+  animation: iconColorSwitch 10s ease-in-out infinite;
 }
 .masthead .github {
   animation: pulseAnim 2s infinite;
@@ -254,39 +299,6 @@ Header:
   100% {
     box-shadow: 0 0 0 0 rgba(217, 227, 248, 0);
   }
-}
-
-/* Wrapper */
-.masthead .iconButton {
-  border-radius: 50%;
-  display: inline-block;
-  font-size: 2.25rem;
-  font-weight: 100;
-  width: 3.2rem;
-  height: 3.05rem;
-  line-height: 3rem;
-  margin: 1rem 0.3rem;
-  position: relative;
-  text-align: center;
-  /* Milk-glass code below */
-  background: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  transition: all 0.3s ease;
-}
-
-/* Icons */
-.masthead .iconButton i {
-  color: white;
-  z-index: 10;
-  cursor: url(images/glove2.png), auto;
-  transition: 0.2s ease;
-}
-
-.masthead .github i {
-  animation: iconColorSwitch 10s ease-in-out infinite;
 }
 .iconButton:hover {
   background: rgba(255, 255, 255, 0.4);
@@ -406,7 +418,7 @@ Navigation:
   color: var(--tertiary-color);
   border-radius: 0;
 }
-
+/*Spinning Text */
 .circle {
   position: relative;
   width: 200px;
@@ -420,6 +432,7 @@ Navigation:
   position: absolute;
   height: 140px;
   width: 140px;
+  border: 1px solid #000;
   background: url(https://user-images.githubusercontent.com/59874288/133302732-959892a4-7ab7-4c9f-a542-59b00f380d3b.jpg)
     center no-repeat;
   background-size: cover;
